tests/ui/impl-trait/impl-fn-predefined-lifetimes.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/impl-fn-predefined-lifetimes.rs:7:9
   |
LL |     |x| x
   |         ^ expected `impl Debug + '_`, got `&u8`
   |
note: previous use here
  --> $DIR/impl-fn-predefined-lifetimes.rs:7:5
   |
LL |     |x| x
   |     ^^^^^

error: aborting due to previous error

